--- a/copytemplate.html
+++ b/copytemplate.html
@@ -5,12 +5,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Github</title>
+    <title>Copy Template</title>
+    <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
+    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -59,7 +62,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="markdown.html">Markdown</a></li>
                                 <li><a href="http.html">HTTP</a></li>
-                                <li><a href="copytemplate.html">Copy Template</a></li>
+                                <li class="active"><a href="copytemplate.html">Copy Template</a></li>
                                 <li><a href="editors.html">Editors</a></li>
                                 <li><a href="onlineimage.html">Online Image Compression</a></li>
                             </ul>
@@ -80,7 +83,7 @@
                                 <li><a href="installgit.html">Install Git</a></li>
                                 <li><a href="gitworkflow.html">Git Workflow</a></li>
                                 <li><a href="gitbranch.html">Git Branch</a></li>
-                                <li class="active"><a href="github.html">Github Pages</a></li>
+                                <li><a href="github.html">Github Pages</a></li>
 
                             </ul>
                         </li>
@@ -94,7 +97,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h1>Github</h1>
+                        <h1>Copy Template</h1>
                     </div>
                 </div>
             </div>
@@ -109,17 +112,22 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>Github</h3>
-                                    <button class="btn btn-ghost" a src="https://pages.github.com/">More Information on Github Pages.</button>
+                                    <h3>Copy Template</h3>
 
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>Github Pages</h2>
-                                <p>For this hands on assignment we were assigned the task of creating a github page. Github gives you the abilty to host a personal project page on their platform. It isn't really a place you would want to host a business
-                                    site but if you wanted to put up a quick project it is a good option.</p>
-                                <p>We were also assigned to come up with ideas that we would maybe want to create an app or site with.</p>
+                                <h2>Copy Template</h2>
+                                <p>Once we had chose a template to use for our Project 0 we had to copy our template into our github pages repo. We also went through the files and looked for 3 files that we wanted to research on.</p>
+                                <p>What I researched was sass, gulp and animate.css. This is what I posted that week, "After looking over the code from my template the 3 things that I researched were Sass, Gulp and animate.css Sass is an extension of CSS,
+                                    it lets you create variables , mixins and nesting css. In their description it says that it helps you keep your css organized especially if its a large style sheet. For example it allows you create a variable and assign
+                                    it a value, for example $coolblue and whatever color you want $coolblue and you pass it around throughout the style sheet. more info on sass (Links to an external site.)Links to an external site. Gulp is what is called
+                                    a task runner and toolkit that can be used with anything. It is usually installed with node.js. And its mainly used for tasks that is time consuming or repetitive. For example minification of scripts which is eliminating
+                                    the white space and shrinking the size of a file. It also can do things like linting which runs the code in search of errors. It seems like it is very popular and when you are more advanced in your coding it is probably
+                                    very useful it seems more info on gulp (Links to an external site.)Links to an external site. Animate.css is looks like it is a plug in for css animation and effects. If you go to their homepage it gives you examples
+                                    of different options you can choose, like slide in, bounce, and shake. All these are effects added to your font or can be done to an image. It is pretty cool and it seems like it is easy to use. "
 
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -140,25 +148,13 @@
         <footer class="probootstrap-footer probootstrap-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-8">
                         <div class="probootstrap-footer-widget">
-                            <h3>About The School</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro provident suscipit natus a cupiditate ab minus illum quaerat maxime inventore Ea consequatur consectetur hic provident dolor ab aliquam eveniet alias</p>
+                            <h3>About The Course</h3>
+                            <p>CIT-82, Web Technologies, is taught by Rio Waller at Fresno City College. It is an online course that is 9 weeks long.</p>
+                        </div>
+                    </div>
 
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-md-push-1">
-                        <div class="probootstrap-footer-widget">
-                            <h3>Links</h3>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Courses</a></li>
-                                <li><a href="#">Teachers</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
                     <div class="col-md-4">
                         <div class="probootstrap-footer-widget">
                             <h3>Contact Info</h3>
@@ -179,7 +175,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 text-left">
-                            <p>&copy; 2018 <a href="https://probootstrap.com/">Fresno City College</a> | Developed by <a href="https://fresnocitycollege.com ">Eric Vargas</a></p>
+                            <p>&copy; 2018 <a href="https://probootstrap.com/">Fresno City College</a> Designed &amp; Developed by <a href="https://fresnocitycollege.com ">Eric Vargas</a></p>
                         </div>
                         <div class="col-md-4 probootstrap-back-to-top ">
                             <p><a href="# " class="js-backtotop ">Back to top <i class="icon-arrow-long-up "></i></a></p>
