--- a/css.html
+++ b/css.html
@@ -44,7 +44,6 @@
                 <div id="navbar-collapse" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
-
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Lectures</a>
                             <ul class="dropdown-menu">
@@ -60,7 +59,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="markdown.html">Markdown</a></li>
                                 <li><a href="http.html">HTTP</a></li>
-                                <li><a href="github.html">Github</a></li>
+                                <li><a href="copytemplate.html">Copy Template</a></li>
                                 <li><a href="editors.html">Editors</a></li>
                                 <li><a href="onlineimage.html">Online Image Compression</a></li>
                             </ul>
@@ -73,6 +72,16 @@
                                 <li><a href="web2.html">Web 2.0</a></li>
                                 <li><a href="bootstraptemp.html">Bootstrap Templates</a></li>
                                 <li><a href="frontendframeworks.html">Front End Frameworks</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Git and the Terminal</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="installgit.html">Install Git</a></li>
+                                <li><a href="gitworkflow.html">Git Workflow</a></li>
+                                <li><a href="gitbranch.html">Git Branch</a></li>
+                                <li><a href="github.html">Github Pages</a></li>
+
                             </ul>
                         </li>
                     </ul>
