--- a/gitworkflow.html
+++ b/gitworkflow.html
@@ -5,7 +5,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Github</title>
+    <title>Git Workflow</title>
+    <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
+    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
@@ -78,9 +80,9 @@
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Git and the Terminal</a>
                             <ul class="dropdown-menu">
                                 <li><a href="installgit.html">Install Git</a></li>
-                                <li><a href="gitworkflow.html">Git Workflow</a></li>
+                                <li class="active"><a href="gitworkflow.html">Git Workflow</a></li>
                                 <li><a href="gitbranch.html">Git Branch</a></li>
-                                <li class="active"><a href="github.html">Github Pages</a></li>
+                                <li><a href="github.html">Github Pages</a></li>
 
                             </ul>
                         </li>
@@ -94,7 +96,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h1>Github</h1>
+                        <h1>Git Workflow</h1>
                     </div>
                 </div>
             </div>
@@ -109,17 +111,20 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>Github</h3>
-                                    <button class="btn btn-ghost" a src="https://pages.github.com/">More Information on Github Pages.</button>
+                                    <h3>Git Workflow</h3>
+
 
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>Github Pages</h2>
-                                <p>For this hands on assignment we were assigned the task of creating a github page. Github gives you the abilty to host a personal project page on their platform. It isn't really a place you would want to host a business
-                                    site but if you wanted to put up a quick project it is a good option.</p>
-                                <p>We were also assigned to come up with ideas that we would maybe want to create an app or site with.</p>
-
+                                <h2>Git Workflow</h2>
+                                <p>We became familiar with the Git workflow, in this weeks assignment we updated, added content, merged and pushed files to github. It is once again amazing looking back at the comments how much more familiar I am with all
+                                    this. Of course there is still a lot to learn but that initial fear isn't as bad.</p>
+                                <p>The following are some of the comments from that weeks assignment. "Overall this assignment was pretty straightforward and very good practice. I feel like I am getting more comfortable with the terminal and git. I did come
+                                    across some issues with merge conflicts. They were a little frustrating but I quickly thought to my self to take it as a learning experience. I was able to find an answer on stackoverflow and it made sense once I solved
+                                    the merge conflicts. It may seem at times a simple tasks that we are assignment but they are very useful for us to become comfortable using the commands. I am beginning to like the terminal in VS code, its convenient.
+                                    What I dont like is my code lighting up with red and yellow tags telling me to add and commit new code. I am not sure yet on how to take that off or if I can but I assume it has to do with VS codes built in version
+                                    control. "</p>
                             </div>
                         </div>
                     </div>
@@ -140,25 +145,13 @@
         <footer class="probootstrap-footer probootstrap-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-8">
                         <div class="probootstrap-footer-widget">
-                            <h3>About The School</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro provident suscipit natus a cupiditate ab minus illum quaerat maxime inventore Ea consequatur consectetur hic provident dolor ab aliquam eveniet alias</p>
+                            <h3>About The Course</h3>
+                            <p>CIT-82, Web Technologies, is taught by Rio Waller at Fresno City College. It is an online course that is 9 weeks long.</p>
+                        </div>
+                    </div>
 
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-md-push-1">
-                        <div class="probootstrap-footer-widget">
-                            <h3>Links</h3>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Courses</a></li>
-                                <li><a href="#">Teachers</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
                     <div class="col-md-4">
                         <div class="probootstrap-footer-widget">
                             <h3>Contact Info</h3>
@@ -179,7 +172,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 text-left">
-                            <p>&copy; 2018 <a href="https://probootstrap.com/">Fresno City College</a> | Developed by <a href="https://fresnocitycollege.com ">Eric Vargas</a></p>
+                            <p>&copy; 2018 <a href="https://probootstrap.com/">Fresno City College</a> Designed &amp; Developed by <a href="https://fresnocitycollege.com ">Eric Vargas</a></p>
                         </div>
                         <div class="col-md-4 probootstrap-back-to-top ">
                             <p><a href="# " class="js-backtotop ">Back to top <i class="icon-arrow-long-up "></i></a></p>
