--- a/installgit.html
+++ b/installgit.html
@@ -5,12 +5,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Github</title>
+    <title>Install Git</title>
+    <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
+    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -59,7 +62,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="markdown.html">Markdown</a></li>
                                 <li><a href="http.html">HTTP</a></li>
-                                <li><a href="copytemplate.html">Copy Template</a></li>
+                                <li><a href="github.html">Github</a></li>
                                 <li><a href="editors.html">Editors</a></li>
                                 <li><a href="onlineimage.html">Online Image Compression</a></li>
                             </ul>
@@ -80,8 +83,8 @@
                                 <li><a href="installgit.html">Install Git</a></li>
                                 <li><a href="gitworkflow.html">Git Workflow</a></li>
                                 <li><a href="gitbranch.html">Git Branch</a></li>
-                                <li class="active"><a href="github.html">Github Pages</a></li>
-
+                                <li><a href="editors.html">Editors</a></li>
+                                <li><a href="onlineimage.html">Online Image Compression</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -94,7 +97,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h1>Github</h1>
+                        <h1>Install Git</h1>
                     </div>
                 </div>
             </div>
@@ -109,17 +112,20 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>Github</h3>
-                                    <button class="btn btn-ghost" a src="https://pages.github.com/">More Information on Github Pages.</button>
+                                    <h3>Install Git</h3>
+                                    <button class="btn btn-ghost" a src="https://git-scm.com/">Check Git out!</button>
 
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>Github Pages</h2>
-                                <p>For this hands on assignment we were assigned the task of creating a github page. Github gives you the abilty to host a personal project page on their platform. It isn't really a place you would want to host a business
-                                    site but if you wanted to put up a quick project it is a good option.</p>
-                                <p>We were also assigned to come up with ideas that we would maybe want to create an app or site with.</p>
-
+                                <h2>Install Git</h2>
+                                <p>We installed Git and became familiar with using the terminal. On my terminal I use git bash. Git allows you to have version control over your projects. It allows you to store files and data in your repository. Github is
+                                    where I store my repositories and together with my command line I save updates to my projects as I work on it.</p>
+                                <p>These were some of my thoughts when we did this project, it is cool how much I have learned in such few weeks. "I have used command line and git before. I have used it for about a year and have ran different commands besides
+                                    git. Ive used npm to install different things like babel. But I am not completely comfortable using the command line. I still run into problems here and there. I am always learning and I like using terminal as well
+                                    as the terminal provided in vs code. There are good resources online to help you with running commands but the problem I often have is that I forget which goes first for example when adding, commiting and pushing to
+                                    github. I have seen the github gui and it is a lot easier to use and pick up the commands but I feel that its not as used by professional developers and perhaps even frowned upon. Using the terminal I think give you
+                                    more power which is cool and a very good tool."</p>
                             </div>
                         </div>
                     </div>
@@ -140,25 +146,13 @@
         <footer class="probootstrap-footer probootstrap-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-8">
                         <div class="probootstrap-footer-widget">
-                            <h3>About The School</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro provident suscipit natus a cupiditate ab minus illum quaerat maxime inventore Ea consequatur consectetur hic provident dolor ab aliquam eveniet alias</p>
+                            <h3>About The Course</h3>
+                            <p>CIT-82, Web Technologies, is taught by Rio Waller at Fresno City College. It is an online course that is 9 weeks long.</p>
+                        </div>
+                    </div>
 
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-md-push-1">
-                        <div class="probootstrap-footer-widget">
-                            <h3>Links</h3>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Courses</a></li>
-                                <li><a href="#">Teachers</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
                     <div class="col-md-4">
                         <div class="probootstrap-footer-widget">
                             <h3>Contact Info</h3>
@@ -179,7 +173,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 text-left">
-                            <p>&copy; 2018 <a href="https://probootstrap.com/">Fresno City College</a> | Developed by <a href="https://fresnocitycollege.com ">Eric Vargas</a></p>
+                            <p>&copy; 2018 <a href="https://probootstrap.com/">Fresno City College</a> Designed &amp; Developed by <a href="https://fresnocitycollege.com ">Eric Vargas</a></p>
                         </div>
                         <div class="col-md-4 probootstrap-back-to-top ">
                             <p><a href="# " class="js-backtotop ">Back to top <i class="icon-arrow-long-up "></i></a></p>
