--- a/bootstrap.html
+++ b/bootstrap.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -60,7 +61,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="markdown.html">Markdown</a></li>
                                 <li><a href="http.html">HTTP</a></li>
-                                <li><a href="github.html">Github</a></li>
+                                <li><a href="copytemplate.html">Copy Template</a></li>
                                 <li><a href="editors.html">Editors</a></li>
                                 <li><a href="onlineimage.html">Online Image Compression</a></li>
                             </ul>
@@ -73,6 +74,16 @@
                                 <li><a href="web2.html">Web 2.0</a></li>
                                 <li><a href="bootstraptemp.html">Bootstrap Templates</a></li>
                                 <li><a href="frontendframeworks.html">Front End Frameworks</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Git and the Terminal</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="installgit.html">Install Git</a></li>
+                                <li><a href="gitworkflow.html">Git Workflow</a></li>
+                                <li><a href="gitbranch.html">Git Branch</a></li>
+                                <li><a href="github.html">Github Pages</a></li>
+
                             </ul>
                         </li>
                     </ul>
