--- a/gitbranch.html
+++ b/gitbranch.html
@@ -5,12 +5,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Github</title>
+    <title>Git Branch</title>
+    <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
+    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -79,8 +82,8 @@
                             <ul class="dropdown-menu">
                                 <li><a href="installgit.html">Install Git</a></li>
                                 <li><a href="gitworkflow.html">Git Workflow</a></li>
-                                <li><a href="gitbranch.html">Git Branch</a></li>
-                                <li class="active"><a href="github.html">Github Pages</a></li>
+                                <li class="active"><a href="gitbranch.html">Git Branch</a></li>
+                                <li><a href="github.html">Github Pages</a></li>
 
                             </ul>
                         </li>
@@ -94,7 +97,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h1>Github</h1>
+                        <h1>Git Branch</h1>
                     </div>
                 </div>
             </div>
@@ -109,17 +112,18 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>Github</h3>
-                                    <button class="btn btn-ghost" a src="https://pages.github.com/">More Information on Github Pages.</button>
+                                    <h3>Git Branch</h3>
+
+                                    <button class="btn btn-ghost" a src="https://learngitbranching.js.org/">Learn Git Branch</button>
 
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>Github Pages</h2>
-                                <p>For this hands on assignment we were assigned the task of creating a github page. Github gives you the abilty to host a personal project page on their platform. It isn't really a place you would want to host a business
-                                    site but if you wanted to put up a quick project it is a good option.</p>
-                                <p>We were also assigned to come up with ideas that we would maybe want to create an app or site with.</p>
-
+                                <h2>Git Branch</h2>
+                                <p>Git Branch was an assignment that we did one week. For the assignment we did a tutorial on Learn Git Branching. It was a tutorial that was gamified. Meaning that it was created to simulate a game, it has animations and
+                                    pop up screens. It makes it a little easier to understand how to go about creating a branch and merging it to your master.</p>
+                                <p>It is not an easy concept to get. It is something that you just have to do over and over to get the hang of it. I remember having issues with it and from what other people posted that week it seems like a lot of other classmates
+                                    had issues as well. Nonetheless, it was good practice.</p>
                             </div>
                         </div>
                     </div>
@@ -140,25 +144,13 @@
         <footer class="probootstrap-footer probootstrap-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-8">
                         <div class="probootstrap-footer-widget">
-                            <h3>About The School</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro provident suscipit natus a cupiditate ab minus illum quaerat maxime inventore Ea consequatur consectetur hic provident dolor ab aliquam eveniet alias</p>
+                            <h3>About The Course</h3>
+                            <p>CIT-82, Web Technologies, is taught by Rio Waller at Fresno City College. It is an online course that is 9 weeks long.</p>
+                        </div>
+                    </div>
 
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-md-push-1">
-                        <div class="probootstrap-footer-widget">
-                            <h3>Links</h3>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Courses</a></li>
-                                <li><a href="#">Teachers</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
                     <div class="col-md-4">
                         <div class="probootstrap-footer-widget">
                             <h3>Contact Info</h3>
@@ -179,7 +171,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 text-left">
-                            <p>&copy; 2018 <a href="https://probootstrap.com/">Fresno City College</a> | Developed by <a href="https://fresnocitycollege.com ">Eric Vargas</a></p>
+                            <p>&copy; 2018 <a href="https://probootstrap.com/">Fresno City College</a> Designed &amp; Developed by <a href="https://fresnocitycollege.com ">Eric Vargas</a></p>
                         </div>
                         <div class="col-md-4 probootstrap-back-to-top ">
                             <p><a href="# " class="js-backtotop ">Back to top <i class="icon-arrow-long-up "></i></a></p>
