--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                                 <li><a href="installgit.html">Install Git</a></li>
                                 <li><a href="gitworkflow.html">Git Workflow</a></li>
                                 <li><a href="gitbranch.html">Git Branch</a></li>
+                                <li><a href="github.html">Github Pages</a></li>
 
                             </ul>
                         </li>
