--- a/installgit.html
+++ b/installgit.html
@@ -62,7 +62,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="markdown.html">Markdown</a></li>
                                 <li><a href="http.html">HTTP</a></li>
-                                <li><a href="github.html">Github</a></li>
+                                <li><a href="copytemplate.html">Copy Template</a></li>
                                 <li><a href="editors.html">Editors</a></li>
                                 <li><a href="onlineimage.html">Online Image Compression</a></li>
                             </ul>
@@ -80,11 +80,11 @@
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Git and the Terminal</a>
                             <ul class="dropdown-menu">
-                                <li><a href="installgit.html">Install Git</a></li>
+                                <li class="active"><a href="installgit.html">Install Git</a></li>
                                 <li><a href="gitworkflow.html">Git Workflow</a></li>
                                 <li><a href="gitbranch.html">Git Branch</a></li>
-                                <li><a href="editors.html">Editors</a></li>
-                                <li><a href="onlineimage.html">Online Image Compression</a></li>
+                                <li><a href="github.html">Github Pages</a></li>
+
                             </ul>
                         </li>
                     </ul>
