--- a/utf8.html
+++ b/utf8.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -61,7 +62,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="markdown.html">Markdown</a></li>
                                 <li><a href="http.html">HTTP</a></li>
-                                <li><a href="github.html">Github</a></li>
+                                <li><a href="copytemplate.html">Copy Template</a></li>
                                 <li><a href="editors.html">Editors</a></li>
                                 <li><a href="onlineimage.html">Online Image Compression</a></li>
                             </ul>
@@ -74,6 +75,16 @@
                                 <li><a href="web2.html">Web 2.0</a></li>
                                 <li><a href="bootstraptemp.html">Bootstrap Templates</a></li>
                                 <li><a href="frontendframeworks.html">Front End Frameworks</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Git and the Terminal</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="installgit.html">Install Git</a></li>
+                                <li><a href="gitworkflow.html">Git Workflow</a></li>
+                                <li><a href="gitbranch.html">Git Branch</a></li>
+                                <li><a href="github.html">Github Pages</a></li>
+
                             </ul>
                         </li>
                     </ul>
@@ -135,25 +146,13 @@
         <footer class="probootstrap-footer probootstrap-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-8">
                         <div class="probootstrap-footer-widget">
-                            <h3>About The School</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro provident suscipit natus a cupiditate ab minus illum quaerat maxime inventore Ea consequatur consectetur hic provident dolor ab aliquam eveniet alias</p>
+                            <h3>About The Course</h3>
+                            <p>CIT-82, Web Technologies, is taught by Rio Waller at Fresno City College. It is an online course that is 9 weeks long.</p>
+                        </div>
+                    </div>
 
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-md-push-1">
-                        <div class="probootstrap-footer-widget">
-                            <h3>Links</h3>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Courses</a></li>
-                                <li><a href="#">Teachers</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
                     <div class="col-md-4">
                         <div class="probootstrap-footer-widget">
                             <h3>Contact Info</h3>
