--- a/cloud.html
+++ b/cloud.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
