--- a/frontendframeworks.html
+++ b/frontendframeworks.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="icon" href="favicon.ico" type="16x16">
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -143,25 +144,13 @@
         <footer class="probootstrap-footer probootstrap-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-8">
                         <div class="probootstrap-footer-widget">
-                            <h3>About The School</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro provident suscipit natus a cupiditate ab minus illum quaerat maxime inventore Ea consequatur consectetur hic provident dolor ab aliquam eveniet alias</p>
+                            <h3>About The Course</h3>
+                            <p>CIT-82, Web Technologies, is taught by Rio Waller at Fresno City College. It is an online course that is 9 weeks long.</p>
+                        </div>
+                    </div>
 
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-md-push-1">
-                        <div class="probootstrap-footer-widget">
-                            <h3>Links</h3>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Courses</a></li>
-                                <li><a href="#">Teachers</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
                     <div class="col-md-4">
                         <div class="probootstrap-footer-widget">
                             <h3>Contact Info</h3>
