--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
                             <div class="probootstrap-text probootstrap-animate">
                                 <h3>About CIT-82</h3>
                                 <p>This is a summary of CIT-82, you will find topics that we have gone over during our course. This course is about Web Technologies and we learn on everything related to the web. From the beginning of the internet to AI.</p>
+                                <p>This course is a 9 week course taught by Rio Waller. She does a wonderful job providing her students with great material and touches a variety of subjects in the tech industry. You will come away with a lot of knowledge
+                                    about the industry.</p>
 
                             </div>
                             <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/library.jpg)">
